cleaned the price column

--- a/newSamsung.ipynb
+++ b/newSamsung.ipynb
@@ -1438,12 +1438,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "5cdf780e-7dbb-4684-9571-daaf755d151d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>ratings</th>\n",
+       "      <th>price</th>\n",
+       "      <th>imgURL</th>\n",
+       "      <th>storage_ram</th>\n",
+       "      <th>os_processor</th>\n",
+       "      <th>camera</th>\n",
+       "      <th>network</th>\n",
+       "      <th>resolution_width</th>\n",
+       "      <th>resolution_height</th>\n",
+       "      <th>display_size(cm)</th>\n",
+       "      <th>battery_capacity(mAh)</th>\n",
+       "      <th>internal_storage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>313</th>\n",
+       "      <td>SAMSUNG Galaxy A14 (Light Green, 64 GB)</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>₹13,999</td>\n",
+       "      <td>https://rukminim2.flixcart.com/image/312/312/x...</td>\n",
+       "      <td>Internal Storage64 GBRAM4 GBTotal Memory64 GBE...</td>\n",
+       "      <td>Operating SystemAndroid 13Processor TypeExynos...</td>\n",
+       "      <td>Primary Camera AvailableYesPrimary Camera50MP ...</td>\n",
+       "      <td>Network Type2G, 3G, 4GSupported Networks4G LTE...</td>\n",
+       "      <td>2408</td>\n",
+       "      <td>1080</td>\n",
+       "      <td>16</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>314</th>\n",
+       "      <td>SAMSUNG Galaxy S22 5G (Phantom Black, 256 GB)</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>₹72,999</td>\n",
+       "      <td>https://rukminim2.flixcart.com/image/312/312/x...</td>\n",
+       "      <td>Internal Storage256 GBRAM8 GB</td>\n",
+       "      <td>Operating SystemAndroid 12Processor TypeOcta C...</td>\n",
+       "      <td>Primary Camera AvailableYesPrimary Camera50MP ...</td>\n",
+       "      <td>Network Type5G, 4G, 3G, 2GSupported Networks5G...</td>\n",
+       "      <td>2340</td>\n",
+       "      <td>1080</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3700</td>\n",
+       "      <td>256.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315</th>\n",
+       "      <td>SAMSUNG Galaxy A13 (Blue, 64 GB)</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>₹14,990</td>\n",
+       "      <td>https://rukminim2.flixcart.com/image/312/312/l...</td>\n",
+       "      <td>Internal Storage64 GBRAM4 GBTotal Memory64 GBE...</td>\n",
+       "      <td>Operating SystemAndroid 12Processor TypeExynos...</td>\n",
+       "      <td>Primary Camera AvailableYesPrimary Camera50MP ...</td>\n",
+       "      <td>Network Type4G, 3G, 2GSupported Networks4G LTE...</td>\n",
+       "      <td>1923</td>\n",
+       "      <td>1080</td>\n",
+       "      <td>16</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              name  ratings    price  \\\n",
+       "313        SAMSUNG Galaxy A14 (Light Green, 64 GB)      3.9  ₹13,999   \n",
+       "314  SAMSUNG Galaxy S22 5G (Phantom Black, 256 GB)      4.3  ₹72,999   \n",
+       "315               SAMSUNG Galaxy A13 (Blue, 64 GB)      4.1  ₹14,990   \n",
+       "\n",
+       "                                                imgURL  \\\n",
+       "313  https://rukminim2.flixcart.com/image/312/312/x...   \n",
+       "314  https://rukminim2.flixcart.com/image/312/312/x...   \n",
+       "315  https://rukminim2.flixcart.com/image/312/312/l...   \n",
+       "\n",
+       "                                           storage_ram  \\\n",
+       "313  Internal Storage64 GBRAM4 GBTotal Memory64 GBE...   \n",
+       "314                      Internal Storage256 GBRAM8 GB   \n",
+       "315  Internal Storage64 GBRAM4 GBTotal Memory64 GBE...   \n",
+       "\n",
+       "                                          os_processor  \\\n",
+       "313  Operating SystemAndroid 13Processor TypeExynos...   \n",
+       "314  Operating SystemAndroid 12Processor TypeOcta C...   \n",
+       "315  Operating SystemAndroid 12Processor TypeExynos...   \n",
+       "\n",
+       "                                                camera  \\\n",
+       "313  Primary Camera AvailableYesPrimary Camera50MP ...   \n",
+       "314  Primary Camera AvailableYesPrimary Camera50MP ...   \n",
+       "315  Primary Camera AvailableYesPrimary Camera50MP ...   \n",
+       "\n",
+       "                                               network  resolution_width  \\\n",
+       "313  Network Type2G, 3G, 4GSupported Networks4G LTE...              2408   \n",
+       "314  Network Type5G, 4G, 3G, 2GSupported Networks5G...              2340   \n",
+       "315  Network Type4G, 3G, 2GSupported Networks4G LTE...              1923   \n",
+       "\n",
+       "     resolution_height  display_size(cm)  battery_capacity(mAh)  \\\n",
+       "313               1080                16                   5000   \n",
+       "314               1080                15                   3700   \n",
+       "315               1080                16                   5000   \n",
+       "\n",
+       "     internal_storage  \n",
+       "313              64.0  \n",
+       "314             256.0  \n",
+       "315              64.0  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[295:298, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "42ed640f-b1b5-46b7-8fea-0f607b5c048e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.iloc[, :]"
+    "df['price'] = df['price'].apply(lambda x: int(x[1:].replace(',', '')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecef0214-b01c-4a38-838e-a90c9d4879b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "re.sub()"
    ]
   }
  ],
