created the clock speed column from the os_processor column

--- a/newSamsung.ipynb
+++ b/newSamsung.ipynb
@@ -1799,8 +1799,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "0f53480a-6015-41dd-988f-ddfa54936cd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>ratings</th>\n",
+       "      <th>price</th>\n",
+       "      <th>imgURL</th>\n",
+       "      <th>os_processor</th>\n",
+       "      <th>camera</th>\n",
+       "      <th>network</th>\n",
+       "      <th>resolution_width</th>\n",
+       "      <th>resolution_height</th>\n",
+       "      <th>display_size(cm)</th>\n",
+       "      <th>battery_capacity(mAh)</th>\n",
+       "      <th>internal_storage</th>\n",
+       "      <th>ram</th>\n",
+       "      <th>has_memory_card_slot</th>\n",
+       "      <th>slot_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>SAMSUNG Galaxy A23 (Blue, 128 GB)</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>19990</td>\n",
+       "      <td>https://rukminim2.flixcart.com/image/312/312/l...</td>\n",
+       "      <td>Operating SystemAndroid 13Processor TypeSEC S5...</td>\n",
+       "      <td>Primary Camera AvailableYesPrimary Camera50MP ...</td>\n",
+       "      <td>Network Type4GSupported Networks4G LTEInternet...</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>1080</td>\n",
+       "      <td>16</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Dedicated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430</th>\n",
+       "      <td>SAMSUNG Galaxy A12 (Black, 64 GB)</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>13999</td>\n",
+       "      <td>https://rukminim2.flixcart.com/image/312/312/k...</td>\n",
+       "      <td>Operating SystemAndroid Pie 10Processor TypeSa...</td>\n",
+       "      <td>Primary Camera AvailableYesPrimary Camera64MP ...</td>\n",
+       "      <td>Network Type4G VOLTE, 4G, 3G, 2GSupported Netw...</td>\n",
+       "      <td>1600</td>\n",
+       "      <td>720</td>\n",
+       "      <td>16</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Dedicated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>SAMSUNG Galaxy M11 (Metallic Blue, 32 GB)</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>10999</td>\n",
+       "      <td>https://rukminim2.flixcart.com/image/312/312/k...</td>\n",
+       "      <td>Operating SystemAndroid 10Processor TypeExynos...</td>\n",
+       "      <td>Primary Camera AvailableYesPrimary Camera13MP ...</td>\n",
+       "      <td>Network Type4G, 3G, 2GSupported Networks4G LTE...</td>\n",
+       "      <td>1560</td>\n",
+       "      <td>720</td>\n",
+       "      <td>16</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Dedicated</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          name  ratings  price  \\\n",
+       "90           SAMSUNG Galaxy A23 (Blue, 128 GB)      4.3  19990   \n",
+       "430          SAMSUNG Galaxy A12 (Black, 64 GB)      4.3  13999   \n",
+       "499  SAMSUNG Galaxy M11 (Metallic Blue, 32 GB)      4.3  10999   \n",
+       "\n",
+       "                                                imgURL  \\\n",
+       "90   https://rukminim2.flixcart.com/image/312/312/l...   \n",
+       "430  https://rukminim2.flixcart.com/image/312/312/k...   \n",
+       "499  https://rukminim2.flixcart.com/image/312/312/k...   \n",
+       "\n",
+       "                                          os_processor  \\\n",
+       "90   Operating SystemAndroid 13Processor TypeSEC S5...   \n",
+       "430  Operating SystemAndroid Pie 10Processor TypeSa...   \n",
+       "499  Operating SystemAndroid 10Processor TypeExynos...   \n",
+       "\n",
+       "                                                camera  \\\n",
+       "90   Primary Camera AvailableYesPrimary Camera50MP ...   \n",
+       "430  Primary Camera AvailableYesPrimary Camera64MP ...   \n",
+       "499  Primary Camera AvailableYesPrimary Camera13MP ...   \n",
+       "\n",
+       "                                               network  resolution_width  \\\n",
+       "90   Network Type4GSupported Networks4G LTEInternet...              1920   \n",
+       "430  Network Type4G VOLTE, 4G, 3G, 2GSupported Netw...              1600   \n",
+       "499  Network Type4G, 3G, 2GSupported Networks4G LTE...              1560   \n",
+       "\n",
+       "     resolution_height  display_size(cm)  battery_capacity(mAh)  \\\n",
+       "90                1080                16                   5000   \n",
+       "430                720                16                   5000   \n",
+       "499                720                16                   5000   \n",
+       "\n",
+       "     internal_storage  ram  has_memory_card_slot  slot_type  \n",
+       "90              128.0  8.0                     1  Dedicated  \n",
+       "430              64.0  4.0                     1  Dedicated  \n",
+       "499              32.0  3.0                     1  Dedicated  "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sample(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "454c390e-fbf9-4d7f-b956-473ac46d9479",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pattern = re.compile(r'clock ?speed[0-9.]+', re.I)\n",
+    "def clock_speed(row):\n",
+    "    match = pattern.search(row)\n",
+    "    return match.group() if match else np.nan\n",
+    "\n",
+    "df['clock_speed'] = df['os_processor'].apply(clock_speed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "ac5046f3-34a6-47ca-b4cf-885f0b440802",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "329                                   Operating System0V\n",
+       "361                   Operating FrequencyGSM - 900, 1800\n",
+       "370                   Operating FrequencyGSM - 900, 1800\n",
+       "378    Operating System0vOperating FrequencyGSM - 900...\n",
+       "Name: os_processor, dtype: object"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['clock_speed'].isna()]['os_processor']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "8975ce54-9b8a-4f9f-bef6-be9fef8c48c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "c6c5202e-2126-4fa8-93b8-55e8f245c640",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['clock_speed'] = df['clock_speed'].apply(lambda x: float(re.search(r'[0-9.]+', x).group()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "188cf2e5-7ce9-4078-ad82-e1329d3d5c96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name                     0\n",
+       "ratings                  0\n",
+       "price                    0\n",
+       "imgURL                   0\n",
+       "os_processor             0\n",
+       "camera                   0\n",
+       "network                  0\n",
+       "resolution_width         0\n",
+       "resolution_height        0\n",
+       "display_size(cm)         0\n",
+       "battery_capacity(mAh)    0\n",
+       "internal_storage         0\n",
+       "ram                      0\n",
+       "has_memory_card_slot     0\n",
+       "slot_type                0\n",
+       "clock_speed              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ef12383-a6e3-487c-8222-a8c489186959",
    "metadata": {},
    "outputs": [],
    "source": []
