got the android versions from the os_processor column

--- a/newSamsung.ipynb
+++ b/newSamsung.ipynb
@@ -2045,8 +2045,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "0ef12383-a6e3-487c-8222-a8c489186959",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pattern = re.compile(r'([0-9.]+Processor|[0-9.]+V|v[0-9.]+|[0-9.]+Primary)', re.I)\n",
+    "def android_version(row):\n",
+    "    match = pattern.search(row)\n",
+    "    return match.group().split('Processor')[0] if match else np.nan\n",
+    "\n",
+    "df['android_version'] = df['os_processor'].apply(android_version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "fa33c7d1-ad7e-4615-950e-d52b6a1e7674",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65     Operating SystemAndroidProcessor CoreOcta Core...\n",
+       "169    Operating SystemAndroidProcessor CoreDual Core...\n",
+       "206    Operating SystemSeries 30 Propreitory vNA (Ser...\n",
+       "249    Operating SystemSeries 30 Feature phoneProcess...\n",
+       "395    Operating SystemTizenProcessor CoreQuad CorePr...\n",
+       "Name: os_processor, dtype: object"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['android_version'].isna()]['os_processor']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "642ca9b4-9718-46d6-bcce-2486804244ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "843c6744-8670-422d-9a4c-e41ea6b8fbad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop('os_processor', inplace = True, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "6595e46f-b78a-4b8e-89cd-cc8630c55134",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(513, 16)"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "c7943a88-66b9-4253-b98d-7f361b25fcee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>ratings</th>\n",
+       "      <th>price</th>\n",
+       "      <th>imgURL</th>\n",
+       "      <th>camera</th>\n",
+       "      <th>network</th>\n",
+       "      <th>resolution_width</th>\n",
+       "      <th>resolution_height</th>\n",
+       "      <th>display_size(cm)</th>\n",
+       "      <th>battery_capacity(mAh)</th>\n",
+       "      <th>internal_storage</th>\n",
+       "      <th>ram</th>\n",
+       "      <th>has_memory_card_slot</th>\n",
+       "      <th>slot_type</th>\n",
+       "      <th>clock_speed</th>\n",
+       "      <th>android_version</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>SAMSUNG Galaxy S22 5G (Bora Purple, 128 GB)</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>61999</td>\n",
+       "      <td>https://rukminim2.flixcart.com/image/312/312/x...</td>\n",
+       "      <td>Primary Camera50MP Rear CameraDual Camera Lens...</td>\n",
+       "      <td>Network Type5GSupported Networks5G</td>\n",
+       "      <td>2340</td>\n",
+       "      <td>1080</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3700</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233</th>\n",
+       "      <td>SAMSUNG Galaxy J6 (Black, 64 GB)</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>https://rukminim2.flixcart.com/image/312/312/j...</td>\n",
+       "      <td>Primary Camera AvailableYesPrimary Camera13MP ...</td>\n",
+       "      <td>Network Type3G, 4G VOLTE, 4G, 2GSupported Netw...</td>\n",
+       "      <td>720</td>\n",
+       "      <td>1480</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Dedicated</td>\n",
+       "      <td>1.60</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>494</th>\n",
+       "      <td>SAMSUNG Galaxy A10s (Blue, 32 GB)</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>9490</td>\n",
+       "      <td>https://rukminim2.flixcart.com/image/312/312/k...</td>\n",
+       "      <td>Primary Camera AvailableYesPrimary Camera13MP ...</td>\n",
+       "      <td>Network Type3G, 4G, 2GSupported NetworksGSM, W...</td>\n",
+       "      <td>720</td>\n",
+       "      <td>1560</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4000</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            name  ratings  price  \\\n",
+       "194  SAMSUNG Galaxy S22 5G (Bora Purple, 128 GB)      4.3  61999   \n",
+       "233             SAMSUNG Galaxy J6 (Black, 64 GB)      4.5   9999   \n",
+       "494            SAMSUNG Galaxy A10s (Blue, 32 GB)      4.6   9490   \n",
+       "\n",
+       "                                                imgURL  \\\n",
+       "194  https://rukminim2.flixcart.com/image/312/312/x...   \n",
+       "233  https://rukminim2.flixcart.com/image/312/312/j...   \n",
+       "494  https://rukminim2.flixcart.com/image/312/312/k...   \n",
+       "\n",
+       "                                                camera  \\\n",
+       "194  Primary Camera50MP Rear CameraDual Camera Lens...   \n",
+       "233  Primary Camera AvailableYesPrimary Camera13MP ...   \n",
+       "494  Primary Camera AvailableYesPrimary Camera13MP ...   \n",
+       "\n",
+       "                                               network  resolution_width  \\\n",
+       "194                 Network Type5GSupported Networks5G              2340   \n",
+       "233  Network Type3G, 4G VOLTE, 4G, 2GSupported Netw...               720   \n",
+       "494  Network Type3G, 4G, 2GSupported NetworksGSM, W...               720   \n",
+       "\n",
+       "     resolution_height  display_size(cm)  battery_capacity(mAh)  \\\n",
+       "194               1080                15                   3700   \n",
+       "233               1480                14                   3000   \n",
+       "494               1560                15                   4000   \n",
+       "\n",
+       "     internal_storage  ram  has_memory_card_slot  slot_type  clock_speed  \\\n",
+       "194             128.0  8.0                     0      Other         2.99   \n",
+       "233              64.0  4.0                     1  Dedicated         1.60   \n",
+       "494              32.0  2.0                     0      Other         2.00   \n",
+       "\n",
+       "    android_version  \n",
+       "194              12  \n",
+       "233               8  \n",
+       "494              10  "
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sample(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "918f4971-b84a-4cb5-a721-cd501cc672cc",
    "metadata": {},
    "outputs": [],
    "source": []
