cleaned the android_version tab removing unwanted letters

--- a/newSamsung.ipynb
+++ b/newSamsung.ipynb
@@ -2096,6 +2096,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "id": "3778ab8a-336d-452a-aa91-a828f353c2ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['android_version'] = df['android_version'].apply(lambda x: re.search(r'[0-9.]+', x).group())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 53,
    "id": "843c6744-8670-422d-9a4c-e41ea6b8fbad",
    "metadata": {},
@@ -2684,8 +2694,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "84e98ce0-0dd4-4ca9-b323-27d6a2138baf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.1"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float('7.1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93798426-097a-42d2-b884-300fe0aff160",
    "metadata": {},
    "outputs": [],
    "source": []
